--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "rhealpix-sf"
 version = "0.4.0"
 description = "This library contains functions for evaluating Simple Feature relations between DGGS Cells and sets of these."
 authors = ["david-habgood <david.habgood@surroundaustralia.com>"]
+packages = [{ include = "rhealsf" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
